--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="dark" />
   <meta name="theme-color" content="#0b0d10" />
-  <title>Constantine Markou — Portfolio</title>
+  <title> Markou — Portfolio</title>
   <meta name="description" content="The portfolio of Constantine Markou: Artwork, Filmmaking, Games design, Photography, Creative Writing." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
     </header>
 
     <main class="tiles" aria-label="Portfolio categories">
-      <!-- Replace href values when your subpages are ready -->
+      <!--Placeholders for now-->
       <a class="tile artwork" href="#" title="Artwork" aria-label="Artwork">
         <div class="tile__label">
           <span>Artwork</span>
@@ -81,14 +81,11 @@
     </main>
 
     <footer>
-      <!-- Optional: swap placeholder links above with your real routes, e.g. /artwork, /filmmaking, /games-design, /photography, /creative-writing -->
-      <p>© <span id="y"></span>Constantine Markou. Crafted with a dark, geometric collage layout.</p>
+      
+      <p>© 2025 </span>Constantine Markou</p>
     </footer>
   </div>
 
-  <script>
-    // Simple year stamp
-    document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
+  
 </body>
 </html>
