--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="dark" />
   <meta name="theme-color" content="#0b0d10" />
-  <title> Markou — Portfolio</title>
+  <title>Constantine Markou — Portfolio</title>
   <meta name="description" content="The portfolio of Constantine Markou: Artwork, Filmmaking, Games design, Photography, Creative Writing." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
