--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="color-scheme" content="dark" />
   <meta name="theme-color" content="#0b0d10" />
   <title>Constantine Markou — Portfolio</title>
-  <link rel="icon" href="media/logo.png" type="image/png" />
-  <link rel="apple-touch-icon" href="media/logo.png" />
-  <link rel="icon" sizes="512x512" href="media/logo.png" />
+  <link rel="icon" href="media/general/logo.png" type="image/png" />
+  <link rel="apple-touch-icon" href="media/general/logo.png" />
+  <link rel="icon" sizes="512x512" href="media/general/logo.png" />
   <meta name="description" content="The portfolio of Constantine Markou: Artwork, Filmmaking, Games design, Photography, Creative Writing." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,7 +58,7 @@
 
       <a class="tile games" href="#" title="Games design" aria-label="Games design">
         <div class="tile__label">
-          <span>Games design</span>
+          <span>Game design</span>
           <span class="arrow" aria-hidden>
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M6 18L18 6M18 6H9M18 6V15" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
