Let it be known, I added each emoji to each navbar item, there was no AI, despite the fact it can seem like a chatgpt ass stylistic decision, I infact felt like It sufficently spiced my shit up

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
       </div>
 
       <nav class="nav" aria-label="Primary">
+        
         <ul class="nav__list">
-          <li><a class="nav__link" href="#" title="Artwork">Artwork</a></li>
-          <li><a class="nav__link" href="#" title="Filmmaking">Filmmaking</a></li>
-          <li><a class="nav__link" href="#" title="Game design">Game design</a></li>
-          <li><a class="nav__link" href="#" title="Photography">Photography</a></li>
-          <li><a class="nav__link" href="#" title="Writing">Writing</a></li>
-          <li><a class="nav__link" href="#" title="About me">About me</a></li>
+          <li><a class="nav__link" href="#" title="Artwork">Artwork🎨</a></li>
+          <li><a class="nav__link" href="#" title="Filmmaking">Filmmaking🎥</a></li>
+          <li><a class="nav__link" href="#" title="Game design">Game Design🕹</a></li>
+          <li><a class="nav__link" href="#" title="Photography">Photography📷</a></li>
+          <li><a class="nav__link" href="#" title="Writing">Writing📚</a></li>
+          <li><a class="nav__link" href="#" title="About me">About me🧬</a></li>
         </ul>
       </nav>
       
