--- a/pages/artwork.html
+++ b/pages/artwork.html
@@ -43,12 +43,12 @@
         </header>
 
         <figure class="piece__media">
-          <img src="/media/artwork/Acetyl%20Fear/MAIN.JPG" alt="Acetyl Fear — main artwork by Constantine Markou" loading="eager" />
+          <img src="/media/artwork/Acetyl Fear/MAIN.JPG" alt="Acetyl Fear — main artwork by Constantine Markou" loading="eager" />
           <figcaption class="sr-only">Main view</figcaption>
         </figure>
 
         <figure class="piece__detail">
-          <img src="/media/artwork/Acetyl%20Fear/CLOSE.JPG" alt="Acetyl Fear — close-up detail" loading="lazy" />
+          <img src="/media/artwork/Acetyl Fear/CLOSE.JPG" alt="Acetyl Fear — close-up detail" loading="lazy" />
           <figcaption class="sr-only">Close-up detail</figcaption>
         </figure>
 
