--- a/pages/artwork/artwork.html
+++ b/pages/artwork/artwork.html
@@ -43,7 +43,7 @@
         </header>
 
         <figure class="piece__media">
-          <img src="/media/artwork/Acetyl%20Fear/MAIN1.JPG" alt="Acetyl Fear — main artwork by Constantine Markou" loading="eager" />
+          <img src="Acetyl Fear/MAIN.jpg" alt="Acetyl Fear — main artwork by Constantine Markou" loading="eager" />
           <figcaption class="sr-only">Main view</figcaption>
         </figure>
 
@@ -75,7 +75,6 @@
     </footer>
   </div>
 
-  <!-- Optional tiny zoom: click any image to open it full in a new tab -->
   
 </body>
 </html>
