--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <ul class="nav__list">
           <li><a class="nav__link" href="#" title="Home">Home</a></li>      
-          <li><a class="nav__link" href="pages/artwork.html" title="Artwork">Artwork🎨</a></li>
+          <li><a class="nav__link" href="pages/artwork/artwork.html" title="Artwork">Artwork🎨</a></li>
           <li><a class="nav__link" href="#" title="Filmmaking">Filmmaking🎥</a></li>
           <li><a class="nav__link" href="#" title="Game design">Game Design🕹</a></li>
           <li><a class="nav__link" href="#" title="Photography">Photography📷</a></li>
