--- a/pages/artwork/artwork.html
+++ b/pages/artwork/artwork.html
@@ -130,6 +130,53 @@
         </section>
       </article>
 
+
+      <!--PIECE 3-->
+     <article class="piece" id="the-creation">
+        <header class="piece__header">
+          <h1 class="piece__title">The Creation of Man's Disease</h1>
+          <p class="piece__subtitle">Pencil on Card</p>
+        </header>
+
+        <div class="piece__gallery">
+          <figure class="piece__media">
+            <img src="The Creation Of Mans Disease/MAIN.jpg" alt="The Creation of Man's Disease - main artwork by Constantine Markou" loading="eager" />
+            <figcaption class="sr-only">Main view of The Creation of Man's Disease</figcaption>
+          </figure>
+        </div>
+
+
+        <section class="piece__desc" aria-labelledby="the-creation-desc">
+          <h2 id="buy-the-ticket-desc">About This Piece</h2>
+          <span class="muted">Replace with your artwork description and details.</span>
+          
+          <dl class="facts">
+            <div class="facts__row">
+              <dt>Year</dt>
+              <dd>2025</dd>
+            </div>
+            <div class="facts__row">
+              <dt>Medium</dt>
+              <dd>—</dd>
+            </div>
+            <div class="facts__row">
+              <dt>Dimensions</dt>
+              <dd>—</dd>
+            </div>
+            <div class="facts__row">
+              <dt>Materials</dt>
+              <dd>—</dd>
+            </div>
+          </dl>
+          
+          <div class="copy">
+            <p><strong>Overview:</strong> One or two sentences describing the piece, its intent, and where it sits in your body of work.</p>
+            <p><strong>Process:</strong> Notes on technique, iterations, or constraints worth mentioning.</p>
+            <p><strong>Themes:</strong> Optional comments on symbolism, references, or narrative elements explored in this work.</p>
+          </div>
+        </section>
+      </article>
+
     </main>
 
     <footer>
