--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     <main class="tiles" aria-label="Portfolio categories">
 
-      <a class="tile artwork" href="#" title="Artwork" aria-label="Artwork">
+      <a class="tile artwork" href="pages/artwork/artwork.html" title="Artwork" aria-label="Artwork">
         <div class="tile__label">
           <span>Artwork</span>
           <span class="arrow" aria-hidden>
